--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: 1fr;
   position: relative;
+  scroll-margin-top: 3.5em;
 }
 
 .img_background {
@@ -37,6 +38,54 @@
 
 .zickzack {
   display: none;
+}
+
+.project_card {
+  aspect-ratio: 4 / 3;
+  width: 100%;
+  max-width: 520px;
+  position: relative;
+  object-fit: contain;
+}
+
+@media (min-width: 768px) {
+  .about {
+    grid-template-columns: 3fr 4fr;
+  }
+
+  .img_background {
+    display: block;
+    aspect-ratio: 8/9;
+    width: 80%;
+    position: relative;
+    background-color: #1f1f1f;
+    z-index: 1;
+    border-radius: 5px;
+    object-fit: contain;
+  }
+
+  .profile_img_small {
+    position: absolute;
+    aspect-ratio: 8/9;
+    width: 350px;
+    z-index: 10;
+    top: 3rem;
+    left: 3rem;
+    border-radius: 5px;
+  }
+
+  .bubbles {
+    position: absolute;
+    top: 1rem;
+    right: 1.4rem;
+    z-index: 20;
+  }
+
+  .dots {
+    position: absolute;
+    bottom: -4.5rem;
+    right: -3rem;
+  }
 }
 
 /* För större skärmar: */
