--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding: 2rem 0;
+  scroll-margin-top: 3.5em;
 }
 
 .projects h2 {
@@ -31,6 +32,7 @@
   width: 90%;
   display: grid;
   grid-template-columns: 1fr;
+  place-items: center;
   gap: 3.5rem;
 }
 
