--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@
   --background-color-lightest: #fefcf6; */
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--font-base);
   line-height: 1.6;
@@ -46,13 +50,22 @@ a {
 }
 
 a:hover:not(.link-btn),
-a:active:not(.link-btn),
-a:focus:not(.link-btn) {
+a:active:not(.link-btn) {
   text-decoration: underline;
   text-underline-offset: 5px;
   text-decoration-color: var(--accent-color);
   text-decoration-thickness: 3px;
   outline: none;
+}
+
+*:focus-visible {
+  outline: 3px solid var(--accent-outline);
+  outline-offset: 2px;
+  border-radius: 2px;
+}
+
+button:focus-visible {
+  outline-offset: 8px;
 }
 
 button {
