--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,7 +1,7 @@
 .about {
   background-color: var(--background-grey-light);
   color: #1e201f;
-  padding: 3rem;
+  padding: 3em;
   display: grid;
   grid-template-columns: 1fr;
   position: relative;
@@ -40,23 +40,24 @@
   display: none;
 }
 
-.project_card {
-  aspect-ratio: 4 / 3;
-  width: 100%;
-  max-width: 520px;
-  position: relative;
-  object-fit: contain;
+.textExpanded {
+  display: none;
 }
 
 @media (min-width: 768px) {
   .about {
     grid-template-columns: 3fr 4fr;
+    justify-items: center;
+    padding-bottom: 5.5em;
+    gap: 2.5em;
+    max-height: 660px;
   }
 
   .img_background {
     display: block;
     aspect-ratio: 8/9;
     width: 80%;
+    max-width: 280px;
     position: relative;
     background-color: #1f1f1f;
     z-index: 1;
@@ -67,7 +68,7 @@
   .profile_img_small {
     position: absolute;
     aspect-ratio: 8/9;
-    width: 350px;
+    width: 100%;
     z-index: 10;
     top: 3rem;
     left: 3rem;
@@ -83,44 +84,27 @@
 
   .dots {
     position: absolute;
-    bottom: -4.5rem;
+    bottom: -4rem;
     right: -3rem;
   }
 }
 
-/* För större skärmar: */
-/* .img_background {
-  display: block;
-  width: 350px;
-  height: 396px;
-  position: relative;
-  background-color: #1f1f1f;
-  z-index: 1;
-  border-radius: 5px;
-  object-fit: contain;
+@media (min-width: 1024px) {
+  .about {
+    padding-bottom: clamp(1em, 4vw + 3em, 8em);
+  }
+
+  .img_background {
+    max-width: 400px;
+  }
+
+  .textExpanded {
+    display: block;
+  }
 }
 
-.profile_img_small {
-  position: absolute;
-  z-index: 10;
-  top: 3rem;
-  left: 3rem;
-  border-radius: 5px;
+@media (min-width: 1400px) {
+  .zickzack {
+    display: block;
+  }
 }
-
-.bubbles {
-  position: absolute;
-  top: 1rem;
-  right: 1.4rem;
-  z-index: 20;
-}
-
-.dots {
-  position: absolute;
-  bottom: -4.5rem;
-  right: -3rem;
-} 
-  
-.zickzack {
-  display: block;
-}*/
