--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -1,7 +1,3 @@
-/* .details {
-
-} */
-
 .summary {
   cursor: pointer;
   list-style: none;
@@ -17,10 +13,23 @@
   margin-top: 0.2em;
   text-decoration: underline;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .content {
   margin-top: 1em;
   padding-left: 1em;
   border-left: 3px dotted var(--accent-outline);
+}
+
+@media (min-width: 768px) {
+  .content {
+    min-width: 338px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .details {
+    display: none;
+  }
 }
