--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,4 +1,4 @@
-.project_card {
+.projectCard {
   aspect-ratio: 4 / 3;
   width: 100%;
   max-width: 520px;
@@ -6,7 +6,7 @@
   object-fit: contain;
 }
 
-.project_title_tab {
+.projectTitleTab {
   position: absolute;
   top: -1.7rem;
   left: 0.4rem;
@@ -23,7 +23,7 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
-.project_title_tab::after {
+.projectTitleTab::after {
   content: "";
   position: absolute;
   top: 1.45rem;
@@ -33,8 +33,8 @@
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
 }
 
-.project_card img,
-.project_info_view {
+.projectCard img,
+.projectInfoView {
   position: absolute;
   top: 0;
   left: 0;
@@ -45,12 +45,12 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.project_card img {
+.projectCard img {
   z-index: 2;
   opacity: 1;
 }
 
-.project_info_view {
+.projectInfoView {
   z-index: 1;
   opacity: 0;
   background-color: var(--background-grey-light);
@@ -63,17 +63,17 @@
   border: 1px solid #c4c4c4;
 }
 
-.project_card.active img {
+.projectCard.active img {
   opacity: 0;
 }
 
-.project_card.active .project_info_view {
+.projectCard.active .projectInfoView {
   opacity: 1;
   z-index: 3;
   pointer-events: auto;
 }
 
-.project_description {
+.projectDescription {
   display: flex;
   flex-direction: column;
   gap: 0.8em;
@@ -81,12 +81,12 @@
   font-size: 1rem;
 }
 
-.tech_container {
+.techContainer {
   display: flex;
   flex-wrap: wrap;
 }
 
-.tech_chip {
+.techChip {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -102,13 +102,13 @@
   white-space: nowrap;
 }
 
-.project_links_container {
+.projectLinksContainer {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
 
-.link_btn {
+.linkBtn {
   display: flex;
   align-items: center;
   gap: 0.2em;
@@ -119,4 +119,12 @@
   padding: 3px 8px;
   border-radius: 10px;
   font-weight: 600;
+}
+
+.linkBtn:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-color: var(--accent-outline);
+  text-decoration-thickness: 3px;
+  outline: none;
 }
