--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,13 @@ body {
   color: #fff;
 }
 
+.appWrapper {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+  background-color: var(--primary-dark);
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -49,8 +56,8 @@ a {
   color: inherit;
 }
 
-a:hover:not(.link-btn),
-a:active:not(.link-btn) {
+a:hover:not(.linkBtn),
+a:active:not(.linkBtn) {
   text-decoration: underline;
   text-underline-offset: 5px;
   text-decoration-color: var(--accent-color);
