--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -48,7 +48,6 @@
   .about {
     grid-template-columns: 3fr 4fr;
     justify-items: center;
-    padding-bottom: 5.5em;
     gap: 2.5em;
     max-height: 660px;
   }
@@ -63,6 +62,7 @@
     z-index: 1;
     border-radius: 5px;
     object-fit: contain;
+    margin-bottom: 3em;
   }
 
   .profile_img_small {
@@ -87,15 +87,22 @@
     bottom: -4rem;
     right: -3rem;
   }
+
+  .about_container {
+    max-width: 550px;
+  }
 }
 
 @media (min-width: 1024px) {
   .about {
-    padding-bottom: clamp(1em, 4vw + 3em, 8em);
+    max-width: 1090px;
+    margin: 0 auto;
+    gap: 5em;
   }
 
   .img_background {
-    max-width: 400px;
+    max-width: 325px;
+    /* justify-self: end; */
   }
 
   .textExpanded {
@@ -104,6 +111,18 @@
 }
 
 @media (min-width: 1400px) {
+  .about_heading_div {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .about h2 {
+    text-align: end;
+    line-height: 1.2;
+    padding: 0.1rem;
+  }
+
   .zickzack {
     display: block;
   }
