--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
   max-width: 1400px;
   width: 100%;
   margin: 0 auto;
-  background-color: var(--primary-dark);
+  background-color: var(--background-grey-light);
 }
 
 img {
