--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -128,3 +128,15 @@
   text-decoration-thickness: 3px;
   outline: none;
 }
+
+/* @media (min-width: 768px) {
+}
+
+@media (min-width: 1024px) {
+} */
+
+@media (min-width: 1400px) {
+  .projectCard {
+    max-width: 580px;
+  }
+}
