--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -46,7 +46,6 @@
 @media (min-width: 768px) {
   .project_content {
     margin: 3.5em 0 2em;
-    width: 94%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
@@ -54,3 +53,9 @@
     row-gap: 3.5em;
   }
 }
+
+/* @media (min-width: 1024px) {
+}
+
+@media (min-width: 1400px) {
+} */
