--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -45,7 +45,7 @@
 
 @media (min-width: 768px) {
   .project_content {
-    margin: 3.5em 0 2em;
+    margin: 4em 0 2em;
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
@@ -54,8 +54,11 @@
   }
 }
 
-/* @media (min-width: 1024px) {
+@media (min-width: 1024px) {
+  .project_content {
+    margin: 4.5em 0 2em;
+  }
 }
 
-@media (min-width: 1400px) {
+/* @media (min-width: 1400px) {
 } */
