Adjustements in project part to have space for more text

--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -133,10 +133,13 @@
     padding: 1em;
   }
 }
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .projectInfoView {
+    padding: 0.5em;
+  }
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
 } */
 
 @media (min-width: 1400px) {
