Updated root variables for colors

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,5 +1,5 @@
 .about {
-  background-color: var(--background-grey-light);
+  background-color: var(--background-color-lightest);
   color: #1e201f;
   padding: 3em;
   display: grid;
