css fixes, color changes

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ body {
   max-width: 1400px;
   width: 100%;
   margin: 0 auto;
-  background-color: var(--background-grey-light);
+  background-color: var(--background-color-lightest);
 }
 
 img {
