--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -45,12 +45,8 @@
 
 @media (min-width: 768px) {
   .project_content {
+    row-gap: 4.5em;
     margin: 4em 0 2em;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
-    gap: 1rem;
-    row-gap: 3.5em;
   }
 }
 
@@ -60,5 +56,10 @@
   }
 }
 
-/* @media (min-width: 1400px) {
-} */
+@media (min-width: 1400px) {
+  .project_content {
+    grid-template-columns: 1fr 1fr;
+    gap: 1.5rem;
+    row-gap: 4.5em;
+  }
+}
