Worked on media queries for project section

--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -140,15 +140,11 @@
 @media (min-width: 500px) {
   .projectInfoView {
     padding: 1em;
-    padding: 2.5em;
   }
 
-  .description {
-    margin-bottom: 1.5em;
-  }
-  /* .midDescription {
+  .midDescription {
     display: block;
-  } */
+  }
 }
 @media (min-width: 768px) {
   .projectCard {
