--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -42,11 +42,17 @@
   position: relative;
   object-fit: contain;
 }
+@media (min-width: 500px) {
+  .project_content {
+    width: 96%;
+  }
+}
 
 @media (min-width: 768px) {
   .project_content {
     row-gap: 4.5em;
     margin: 4em 0 2em;
+    width: 90%;
   }
 }
 
