--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -10,7 +10,7 @@
 
 .projects h2 {
   font-size: 1.8rem;
-  box-shadow: inset 0 -0.5em var(--accent-color);
+  box-shadow: inset 0 -0.5em var(--accent-outline);
   margin-bottom: 2rem;
 }
 
@@ -19,12 +19,17 @@
   gap: 2rem;
 }
 
+.tab {
+  color: var(--primary-dark);
+}
+
 .tab_active {
   text-decoration: underline;
   text-underline-offset: 5px;
-  text-decoration-color: var(--accent-color);
+  text-decoration-color: var(--accent-outline);
   text-decoration-thickness: 6px;
   outline: none;
+  font-size: 1.1rem;
 }
 
 .project_content {
