Added media query for landscape orientation on small screens

--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -176,6 +176,12 @@
   }
 }
 
+@media (min-width: 768px) and (orientation: landscape) {
+  .projectCard {
+    max-width: 500px;
+  }
+}
+
 @media (min-width: 1024px) {
   .projectCard {
     max-width: 750px;
