--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -176,11 +176,11 @@
   }
 }
 
-@media (min-width: 768px) and (orientation: landscape) {
+/* @media (min-width: 768px) and (orientation: landscape) {
   .projectCard {
     max-width: 600px;
   }
-}
+} */
 
 @media (min-width: 1024px) {
   .projectCard {
