--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -55,6 +55,12 @@
   }
 }
 
+@media (min-width: 768px) and (orientation: landscape) {
+  .projectCard {
+    width: 96%;
+  }
+}
+
 @media (min-width: 1024px) {
   .project_content {
     margin: 4.5em 0 2em;
