--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -56,8 +56,8 @@
 }
 
 @media (min-width: 768px) and (orientation: landscape) {
-  .projectCard {
-    width: 96%;
+  .project_content {
+    width: 98%;
   }
 }
 
