--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -55,11 +55,11 @@
   }
 }
 
-@media (min-width: 768px) and (orientation: landscape) {
+/* @media (min-width: 768px) and (orientation: landscape) {
   .project_content {
     width: 98%;
   }
-}
+} */
 
 @media (min-width: 1024px) {
   .project_content {
