--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -182,7 +182,8 @@
   } */
 
   .projectInfoView {
-    font-size: 0.9rem;
+    /* font-size: 0.9rem; */
+    font-size: 14px;
     color: red;
   }
 }
