--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -182,9 +182,8 @@
   }
 
   .projectInfoView {
-    /* font-size: 0.9rem; */
-    /* font-size: 13px;
-    color: rgb(212, 96, 160); */
+    font-size: 12px;
+    color: rgb(212, 96, 160);
   }
 }
 
