--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -61,7 +61,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  font-size: 1rem;
+  /* font-size: 1rem; */
 }
 
 .projectCard.active img {
@@ -182,8 +182,12 @@
   }
 
   .projectInfoView {
-    font-size: 12px;
-    color: rgb(212, 96, 160);
+    /* font-size: 12px; */
+    /* color: rgb(212, 96, 160); */
+  }
+
+  .midDescription {
+    margin-bottom: 0.8em;
   }
 }
 
