--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -178,16 +178,20 @@
 
 @media (min-width: 660px) and (orientation: landscape) {
   .projectCard {
-    max-width: 682px;
+    max-width: 680px;
   }
 
   .projectInfoView {
     font-size: 12px;
-    color: rgb(212, 96, 160);
+    /* color: rgb(212, 96, 160); */
   }
 
   .midDescription {
-    margin-bottom: 0.8em;
+    margin-bottom: 1em;
+  }
+
+  .linkBtn {
+    font-size: 12px;
   }
 }
 
