--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -165,7 +165,6 @@
 
   .projectInfoView {
     font-size: 12px;
-    color: rgb(212, 96, 160);
   }
 
   .midDescription {
@@ -183,11 +182,12 @@
   }
 
   .description {
-    margin-bottom: 0em;
+    margin-bottom: 0;
   }
 
   .projectInfoView {
     padding: 2em;
+    font-size: 1rem;
   }
 
   .midDescription {
@@ -196,35 +196,14 @@
   }
 }
 
-@media (orientation: landscape) {
-  body::after {
-    content: "LANDSCAPE!";
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    background: yellow;
-    color: black;
-    font-size: 20px;
-    z-index: 9999;
-  }
-}
-
 @media (min-width: 1024px) {
   .projectCard {
     max-width: 750px;
-  }
-  .projectInfoView {
-    font-size: 1rem;
-    padding: 2em;
   }
 
   .detailedDescription {
     display: block;
     margin-bottom: 1em;
-  }
-
-  .linkBtn {
-    font-size: 1rem;
   }
 }
 
