--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -24,12 +24,23 @@
 }
 
 .tab_active {
-  text-decoration: underline;
+  /* text-decoration: underline;
   text-underline-offset: 5px;
   text-decoration-color: var(--accent-outline);
   text-decoration-thickness: 6px;
-  outline: none;
+  outline: none; */
   font-size: 1.1rem;
+  position: relative;
+}
+
+.tab_active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  width: 100%;
+  height: 6px;
+  background-color: var(--accent-outline);
 }
 
 .project_content {
