--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
   /* Accent colors */
   --accent-color: #fef100;
-  --accent-outline: #f8c33e;
+  --accent-outline: #fccb4f;
 
   /* Complement colors */
   --tertiary-purple: #cfb6ee;
