--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -15,7 +15,7 @@
 .about_container {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .about_heading_div {
@@ -32,8 +32,20 @@
 
 .greeting_text {
   font-size: 1.8rem;
-  padding: 0 0.2rem;
-  box-shadow: inset 0 -0.5em var(--accent-color);
+  padding: 0 15px 0 0;
+  position: relative;
+  z-index: 2;
+}
+
+.greeting_text::after {
+  content: "";
+  position: absolute;
+  left: 3px;
+  bottom: 3px;
+  width: 100%;
+  height: 12px;
+  background-color: var(--accent-color);
+  z-index: -1;
 }
 
 .zickzack {
