--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -113,6 +113,14 @@
     height: 100%;
   }
 
+  .navUl .active {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-color: var(--accent-color);
+    text-decoration-thickness: 3px;
+    outline: none;
+  }
+
   .introText {
     bottom: 4em;
     left: 4em;
