--- a/src/components/LanguageSwitch/LanguageSwitch.module.css
+++ b/src/components/LanguageSwitch/LanguageSwitch.module.css
@@ -1,20 +1,62 @@
 .customSelect {
-  background-color: #fefefe;
-  color: #1e201f;
-  padding: 3px 5px;
+  background-color: var(--background-color-lightest);
+  color: var(--primary-dark);
   border: 1px solid #ccc;
   border-radius: 4px;
-  width: fit-content;
   font-size: 1rem;
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 13px;
+}
+
+.selected {
+  font-weight: 500;
+  position: relative;
+  padding: 0px 16px 0px 3px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.2em;
+}
+
+.selected:hover {
+  cursor: pointer;
+}
+
+.flag {
+  display: inline-block;
+}
+
+.arrow {
+  position: absolute;
+  right: 0px;
+  top: 2px;
+  pointer-events: none;
 }
 
 .options {
   display: none;
+  width: 86px;
+  border-top: 1px solid var(--secondary-grey);
 }
 
 .options.active {
   display: block;
+}
+
+.options li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.2em;
+  justify-content: start;
+  padding-left: 3px;
+}
+
+.options li:hover {
+  background-color: var(--secondary-grey);
+  color: var(--background-color-lightest);
+  font-weight: 500;
+  border-radius: 2px;
+  cursor: pointer;
 }
