--- a/src/components/LanguageSwitch/LanguageSwitch.module.css
+++ b/src/components/LanguageSwitch/LanguageSwitch.module.css
@@ -53,7 +53,7 @@
   align-items: center;
   gap: 0.2em;
   justify-content: start;
-  padding: 1px 0 0 4px;
+  padding: 1px 6px 0 4px;
 }
 
 .options li:hover,
