--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,7 @@
 }
 
 .headerTitle {
+  font-family: "PT Mono", monospace;
   font-weight: 500;
   padding: 0.5rem;
   letter-spacing: 0.15rem;
@@ -93,7 +94,7 @@
 
   .headerTitle {
     border-right: 0.1em solid #fff;
-    font-size: 2.2rem;
+    font-size: 2.3rem;
     line-height: 1;
   }
 
