--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -29,16 +29,17 @@
 
 .tab_container {
   display: flex;
-  gap: 2rem;
+  gap: 1.2rem;
 }
 
 .tab {
   color: var(--primary-dark);
   position: relative;
+  font-size: 0.8rem;
 }
 
 .tab_active {
-  font-size: 1.1rem;
+  font-size: 0.95rem;
   position: relative;
 }
 
@@ -65,6 +66,18 @@
 @media (min-width: 500px) {
   .project_content {
     width: 96%;
+  }
+
+  .tab_container {
+    gap: 2rem;
+  }
+
+  .tab {
+    font-size: 0.9rem;
+  }
+
+  .tab_active {
+    font-size: 1.1rem;
   }
 }
 
