--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@
   /* Fonts */
   --font-heading: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   --font-base: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  --font-base: "Jost", sans-serif;
 
   /* alternative 2 */
   /* --primary-dark: #162a2c;
@@ -50,6 +51,7 @@ body {
   line-height: 1.6;
   background-color: #b3aeae;
   color: #fff;
+  /* font-weight: 500; */
 }
 
 .appWrapper {
